<resources>
    <string name="app_name">App</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="map">Map</string>
    <string name="news">News/Events</string>
    <string name="learning">E-learning</string>
    <string name="groups">Groups</string>
    <string name="timetable">Timetable</string>
    <string name="contacts">Contacts</string>
    <string name="feedbacks">FeedBacks</string>
    <string name="about">About</string>
    <string name="title_activity_login">Sign in</string>
    <string name="API_KEY">123456</string>
    <string name="Email">Email</string>
    <string name="Name">Name</string>
    <string name="Subject">Subject</string>
    <string name="comment">COMMENT</string>
    <string name="spinner_prompt">Select Day</string>
    <string name="alarm_text">remind me</string>
    <string name="add_newTimeTable">Add New Course To Timetable</string>
    <string name="edit_timeTable">Edit TimeTable</string>


    <string-array name="directory">

        <item>Student Directory</item>
        <item>Staff Directory</item>

    </string-array>

    <!-- Strings related to login -->
    <string name="prompt_userID">User ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_userID">This userID address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings peculiar to news activities -->
    <string name="rssImageDesc">The Title for this feed is given in the space provided: This is a sample title for an anonymous feed</string>
    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_timetable">Timetable</string>

    <string-array name="days_array">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string-array name="session_array">
        <item>2000/2001</item>
        <item>2001/2002</item>
        <item>2002/2003</item>
        <item>2003/2004</item>
        <item>2004/2005</item>
        <item>2005/2006</item>
        <item>2006/2007</item>
        <item>2007/2008</item>
        <item>2008/2009</item>
        <item>2009/2010</item>
        <item>2010/2011</item>
        <item>2011/2012</item>
        <item>2012/2013</item>
        <item>2013/2014</item>
        <item>2014/2015</item>
        <item>2015/2016</item>
        <item>2016/2017</item>
        <item>2017/2018</item>
    </string-array>
    -array>


    <string name="title_activity_time_table_management">TimeTable Management</string>
    <string name="title_activity_news_display">News</string>
    <string name="NewsCatSelectionInstruction">Please Select From one of the below Categories</string>

    <string name="result_text_session"> Select Appropriate Session</string>
    <string name="result_text_semester"> Select Appropriate Semester</string>
    <string name="result_text_firstSemester">First Semester</string>
    <string name="result_text_secondSemester">Second Semester</string>
    <string name="resultDisplay_text">Result Of Semester Session </string>
    <string name="title_activity_result_display">ResultDisplay</string>
    <string name="err_load_earlier_prompt">Click to view locally stored news</string>
    <string name="courseDisplay_text">Course Display Text</string>
    <string name="contact_search_description">Search For Specified Person</string>
    <string name="contact_search_hint">Search by name, department or phone</string>
    <string name="contact_search_entry_error">Person Not found\nPlease make sure you have correctly entered the data</string>
    <string name="contact_searching">Searching. . .</string>
    <string name="contact_search_network_error">Network Error!\nAn Error Occurred While Attempting Connection To The Service</string>
    <string name="contact_search_format_error">Unknown Format Error!\nThe Stored Search Has Been Tampered With</string>


</resources>
